<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_selected"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/create_post_select_image" />

        <Button
            android:id="@+id/button_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_post_select_image" />

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/create_post_write_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/create_post_write_post"
            android:inputType="text" />

        <Button
            android:id="@+id/button_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_post_publish" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>