<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bloglikeitsinsta.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action android:id="@+id/action_nav_home_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
        <action
            android:id="@+id/action_global_createPostFragment"
            app:destination="@id/createPostFragment" />

    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.bloglikeitsinsta.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bloglikeitsinsta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_wordpress_connection"
        android:name="com.example.bloglikeitsinsta.ui.configuration.WordpressConnectionFragment"
        android:label="@string/action_wordpress_verbindung"
        tools:layout="@layout/fragment_wordpress_connection" />

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.example.bloglikeitsinsta.ui.postdetail.PostDetailFragment"
        android:label="Post Details"
        tools:layout="@layout/fragment_post_detail">

        <argument
            android:name="post"
            app:argType="com.example.bloglikeitsinsta.wordpress.model.WordPressPost" />

    </fragment>

    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.example.bloglikeitsinsta.ui.create.CreatePostFragment"
        android:label="Create Post"
        tools:layout="@layout/fragment_create_post" />
</navigation>